package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.stringer_all) = false;

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;

message Prekeys {
	repeated bytes PrekeySecrets = 1 [(gogoproto.customtype) = "Byte32", (gogoproto.nullable) = false];
	repeated bytes PrekeyPublics = 2 [(gogoproto.customtype) = "Byte32", (gogoproto.nullable) = false];
}
